update after shen's edit

--- a/app/index.html
+++ b/app/index.html
@@ -17,29 +17,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/index.html" class="navbar-brand">
+          <a href="http://echarts.baidu.com/index.html" class="navbar-brand">
             <img src="http://echarts.baidu.com/images/logo.png" alt="echarts logo" class="navbar-logo"/>
           </a>
           <a class="nav-title" href="#">主题在线构建工具</a>
         </div>
         <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li id="nav-index"><a href="index.html">首页</a></li>
+            <li id="nav-index"><a href="http://echarts.baidu.com/index.html">首页</a></li>
             <li id="nav-doc" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">文档<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="/tutorial.html">教程</a></li>
-                <li><a href="/api.html">API</a></li>
-                <li><a href="/option.html">配置项手册</a></li>
-                <li><a href="/changelog.html">Changelog</a></li>
+                <li><a href="http://echarts.baidu.com/tutorial.html">教程</a></li>
+                <li><a href="http://echarts.baidu.com/api.html">API</a></li>
+                <li><a href="http://echarts.baidu.com/option.html">配置项手册</a></li>
+                <li><a href="http://echarts.baidu.com/changelog.html">Changelog</a></li>
               </ul>
             </li>
-            <li id="nav-examples"><a href="examples.html">实例</a></li>
+            <li id="nav-examples"><a href="http://echarts.baidu.com/examples.html">实例</a></li>
             <li id="nav-download" class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">下载<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="/download.html">下载</a></li>
-                <li><a href="/builder.html">在线构建</a></li>
-                <li><a href="/download-map.html">地图</a></li>
-                <li><a href="/download-theme.html">主题</a></li>
+                <li><a href="http://echarts.baidu.com/download.html">下载</a></li>
+                <li><a href="http://echarts.baidu.com/builder.html">在线构建</a></li>
+                <li><a href="http://echarts.baidu.com/download-map.html">地图</a></li>
+                <li><a href="http://echarts.baidu.com/download-theme.html">主题</a></li>
               </ul>
             </li>
             <li id="nav-github"><a href="https://github.com/ecomfe/echarts" target="_blank">GitHub</a></li>
