fix save file for safari

--- a/app/index.html
+++ b/app/index.html
@@ -434,6 +434,7 @@
     <script src="vendors/bootstrap.min.js"></script>
     <script src="vendors/bootstrap-colorpicker.min.js"></script>
     <script src="vendors/vue.min.js"></script>
+    <script src="vendors/FileSaver.min.js"></script>
     <script src="vendors/echarts.min.js"></script>
     <script src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
 
