--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
                       <div class="form-group">
                         <label class="col-sm-3 control-label">系列数量</label>
                         <div class="col-sm-9">
-                          <input @change="seriesCntChanges()" type="number" class="form-control" v-model="theme.seriesCnt" />
+                          <input type="number" class="form-control" v-model="theme.seriesCnt" />
                         </div>
                       </div>
                     </form>
