--- a/app/index.html
+++ b/app/index.html
@@ -386,6 +386,9 @@
           </div><!-- end of left -->
 
           <div class="col-md-9 col-sm-8 chart-container">
+
+            <h3>示例预览</h3>
+
             <div class="row">
               <div v-for="i in [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" class="ec-container col-md-6">
                 <div class="ec-panel"></div>
